=head1 NAME

Changes

=head1 0.15 Mon Nov 25 10:32:27 SGT 2002

- fix a missing dependency: the modified() is set for the index.html
  objects when any of the index_(top|bottom) attributes's files are
  newer than the autogenerated index.html based on any of these files.

- Fix DocSet::NavigateCache::new() to properly handle docsets with no
  nodes

- in DocSet::5005compat added a workaround for a bug in
  ExtUtils::MakeMaker v < 6.00, which tries to parse any word which
  include VERSION in it, which causes problems when you do 'r' in
  CPAN.pm. Thanks to Mark Veltzer for reporting the problem.

=head1 0.14 Mon Aug 19 14:29:36 SGT 2002

- added two examples that one can play with which demonstrate all the
  DocSet features:
  o examples/site/ - the shrinked version of perl.apache.org
  o examples/presentation - a package for generating slides/handouts

- support local docset options, which can set command line options for
  the scope of the current docset and below it.

- support the automatic page-break insertion in the slides-mode (-e)

- make the index_node's meta.id and meta.stitle attributes available
  to the templates

- fix the html title rendering, not to have <a href="" name=""> as
  some older browsers crush on that, use 
  <a href=""></a><a name=""></a> instead

- in each document verify that there are no duplicated anchors and
  croak if there are.

- added the croak method to the rendering class, so if there is a
  problem the context is dumped (the problematic source file).

- croak if the config file includes both: grouped and non-grouped
  items.

- added docset id duplication checking, the program will croak when a
  duplication is detected and report the offending config file and the
  config file it was previous seen in.

- fix a bug with properly setting doc.dir.abs_doc_root, for the docs
  in the very root e.g, src/404.html.

- added a new special attribute: 'changes', which points to a hidden