@@ -1,0 +1,13 @@
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         DocSet
+version:      0.16
+version_from: lib/DocSet.pm
+installdirs:  site
+requires:
+    Pod::POM:                      0.15
+    Template:                      2.0
+    Storable:                      
+    HTML::Parser:                  3.25
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.10_03
