@@ -1,6 +1,6 @@
 package DocSet;
 
-$VERSION = '0.15';
+$VERSION = '0.16';
 
 =head1 NAME
 
